# gtk-lvgl-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  launch.json  lcd_config.h  lvgl-sim.c  mk.sh  mk_debug.sh  mk_demo_music.sh  run.sh  sim_config.h  sources-files.cmake
lvgl-build/: CMakeLists.txt  lv_conf.h
lvgl-demos/: CMakeLists.txt
resources/: gpio.glade  gresources.xml  led.xcf  lvglsim.glade
src/app/: app-ui.c  app-ui.h  hal-gpio.c  hal-gpio.h  license.h
src/sim/: logger.h  lvgl-integration.c  lvgl-integration.h  lvgl-sim.c
